Tests/RunCMake/CMakePresets/InvalidVersion-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidVersion:
Error: @2,14: Invalid "version" field
  "version": "1.0",
             \^$
